Fix paddings, margins, font-sizes, gaps

--- a/src/stylus/parts/comment.styl
+++ b/src/stylus/parts/comment.styl
@@ -5,6 +5,8 @@
     align-items center
     justify-content space-between
     margin 20px 0
+    @media(max-width: 750px)
+        font-size 14px
 .comment__head > div
     display flex
     align-items center
